# cobol-llm

./: .gitignore  Makefile.am  README.md  configure.ac
examples/: Makefile.am  hello-llm.cob
lib/c/: Makefile.am  cob_curl.c  cob_curl.h  cob_json.c  cob_json.h  cob_utils.c  cob_utils.h
lib/cob/: LLM-CHAT.cob  LLM-CLEANUP.cob  LLM-INIT.cob  Makefile.am
lib/copy/: LLM-CONFIG.cpy  LLM-REQUEST.cpy  LLM-RESPONSE.cpy  LLM-STATUS.cpy  LLM.cpy
